testimonials made dynamyc and some spacings fixed

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -25,7 +25,6 @@
   gap: 1.6rem;
   margin-top: 7rem;
   margin-bottom: 10rem;
-  padding: 0 6rem;
 }
 
 @media (min-width: 992px) {
