--- a/src/Components/Testimonial/TestimonialBox/TestimonialBox.css
+++ b/src/Components/Testimonial/TestimonialBox/TestimonialBox.css
@@ -1,15 +1,14 @@
 .testimonial-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+  display: flex;
+  flex-direction: column;
   background-color: var(--section-bg);
   padding: 2.5rem 4rem;
   border-radius: 0.6rem;
   color: var(--text-color);
-  min-height: 40rem;
   border: 1px solid #202837;
+  min-height: 60rem;
   user-select: none;
-  background-color: #0B121F;
+  background-color: #0b121f;
 }
 .testimonial-box__comment {
   line-height: 3rem;
@@ -17,9 +16,13 @@
   margin-bottom: 2rem;
 }
 .testimonial-box__footer {
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex: 1;
 }
 .testimonial-box__writer-img {
+  width: 12rem;
   margin-bottom: 2rem;
 }
 .testimonial-box__writer-info {
